chore: add roles endpoint
